update title in notwbook

--- a/GetStockInfo.ipynb
+++ b/GetStockInfo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# *Install Taiwan Stock Package using \"pip install twstock\", then you can start using the package*"
+    "# Get Stock Information"
    ]
   },
   {
